Solved the CORS issue and backend issue